Stops stored runs from shifting when hovering over in search mode.
Adds width: 1px to the delete button class to maintain a fixed width
for that element.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,6 +151,7 @@ p.error-message {
 .delete-button {
 	cursor: pointer;
 	padding-left: 10px;
+	width: 1px;
 	font-weight: bold;
 }
 
